Fix horizontal scrolling UI

--- a/style/style.css
+++ b/style/style.css
@@ -85,6 +85,10 @@ a {
     width: 600px;
 }
 
+div.container {
+    height: 100%;
+}
+
 article {
     width: 400px;
     float: left;
@@ -159,7 +163,6 @@ article > div {
 }
 
 .remove-reference {
-    display: none;
     color: #F5A623;
     font-size: 0.7em;
     text-decoration: none;
@@ -169,9 +172,6 @@ article > div {
     opacity: 1;
 }
 
-.add-reference {
-    display: none;
-}
 .add-reference-select {
     font-size: 16px;
 }
